--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "logon",
-  "version": "0.0.0",
+  "name": "angular-logon",
+  "version": "0.0.1",
+  "description": "A logon page in Angular6.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod  --build-optimizer",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prod": "node server.js"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.1.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
@@ -20,9 +22,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "bootstrap": "^4.1.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "path": "^0.12.7",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
@@ -44,5 +52,23 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VinceZK/Logon.git"
+  },
+  "keywords": [
+    "logon",
+    "SignIn",
+    "SSO",
+    "Authenticate",
+    "nodejs",
+    "angular"
+  ],
+  "author": "vincezk",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/VinceZK/Logon/issues"
+  },
+  "homepage": "https://github.com/VinceZK/Logon#readme"
 }
