--- a/package.json
+++ b/package.json
@@ -24,20 +24,23 @@
     "@angular/router": "^6.0.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
+    "compression": "^1.7.2",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.7",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "node-authorization": "^1.0.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0-rc.0",
-    "ui-message": "^0.0.8",
+    "ui-message": "^1.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.4",
     "@angular-devkit/build-angular": "~0.6.5",
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.5",
