--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-logon",
-  "version": "0.0.1",
+  "name": "ui-logon",
+  "version": "0.1.0",
   "description": "A logon page in Angular6.",
   "scripts": {
     "ng": "ng",
@@ -9,14 +9,15 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "redis": "redis-server /etc/redis/6379.conf",
     "prod": "node $NODE_DEBUG_OPTION server.js"
   },
   "dependencies": {
+    "@angular/common": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
     "@angular/animations": "^6.0.3",
     "@angular/cdk": "^6.1.0",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
@@ -31,19 +32,26 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "node-authorization": "^1.0.5",
+    "json-on-relations": "1.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "cors": "^2.8.5",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0-rc.0",
-    "ui-message": "^1.1.0",
+    "ui-message": "^1.1.2",
+    "ui-message-angular": "^1.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.4",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "~0.6.5",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
     "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.5",
+    "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
