--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ui-logon",
-  "version": "0.1.2",
+  "version": "1.0.1",
   "description": "A logon page in Angular6.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod  --build-optimizer",
+    "ngbuild": "ng build logon --prod",
+    "publish": "cd dist/logon && npm publish",
+    "build_publish": "npm run ngbuild && npm run publish",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -13,60 +16,59 @@
     "prod": "node $NODE_DEBUG_OPTION server.js"
   },
   "dependencies": {
-    "@angular/common": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/animations": "^6.0.3",
-    "@angular/cdk": "^6.1.0",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/router": "^7.2.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.1",
-    "compression": "^1.7.2",
-    "connect-redis": "^3.3.3",
+    "bootstrap": "^4.2.1",
+    "compression": "^1.7.3",
+    "connect-redis": "^3.4.0",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.7",
-    "express": "^4.16.3",
+    "core-js": "^2.6.2",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "node-authorization": "^1.0.5",
     "json-on-relations": "1.2.0",
+    "node-authorization": "^1.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "cors": "^2.8.5",
     "path": "^0.12.7",
-    "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.0.0-rc.0",
-    "ui-message": "^1.1.2",
-    "ui-message-angular": "^1.0.0",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.3.3",
+    "ui-message": "^1.1.3",
+    "ui-message-angular": "^1.1.2",
+    "zone.js": "^0.8.27"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/build-angular": "~0.6.5",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.8",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@angular/compiler-cli": "^7.2.0",
+    "@angular-devkit/build-ng-packagr": "~0.12.1",
+    "@angular-devkit/build-angular": "~0.12.1",
+    "ng-packagr": "^4.6.0",
+    "tsickle": "0.34.0",
+    "tslib": "^1.9.3",
+    "typescript": "~3.2.2",
+    "@angular/cli": "~7.2.1",
+    "@angular/language-service": "^7.2.0",
+    "@types/jasmine": "~3.3.5",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.12.18",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.1"
   },
   "repository": {
     "type": "git",
