--- a/projects/logon/package.json
+++ b/projects/logon/package.json
@@ -1,8 +1,26 @@
 {
   "name": "ui-logon-angular",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
-  }
+    "@angular/common": "^7.2.0",
+    "@angular/core": "^7.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VinceZK/Logon.git"
+  },
+  "keywords": [
+    "logon",
+    "SignIn",
+    "SSO",
+    "Authenticate",
+    "nodejs",
+    "angular"
+  ],
+  "author": "VinceZk",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/VinceZK/Logon/issues"
+  },
+  "homepage": "https://github.com/VinceZK/Logon#readme"
 }
