--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-logon",
-  "version": "1.0.4",
-  "description": "A logon page in Angular6.",
+  "version": "1.1.0",
+  "description": "A logon page in Angular and Node",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,16 +16,15 @@
     "prod": "node $NODE_DEBUG_OPTION server.js"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.0",
+    "@angular/animations": "^8.2.11",
     "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
+    "@angular/common": "^8.2.11",
+    "@angular/compiler": "^8.2.11",
+    "@angular/core": "^8.2.11",
+    "@angular/forms": "^8.2.11",
+    "@angular/platform-browser": "^8.2.11",
+    "@angular/platform-browser-dynamic": "^8.2.11",
+    "@angular/router": "^8.2.11",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "compression": "^1.7.3",
@@ -35,30 +34,30 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "json-on-relations": "1.2.0",
+    "json-on-relations": "2.3.1",
     "node-authorization": "^1.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "rxjs": "^6.3.3",
-    "ui-message": "^1.1.3",
-    "ui-message-angular": "^1.1.2",
-    "zone.js": "^0.8.27"
+    "rxjs": "^6.5.3",
+    "ui-message": "^1.2.0",
+    "ui-message-angular": "^1.2.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.0",
-    "@angular-devkit/build-ng-packagr": "~0.12.1",
-    "@angular-devkit/build-angular": "~0.12.1",
-    "ng-packagr": "^4.6.0",
-    "tsickle": "0.34.0",
-    "tslib": "^1.9.3",
-    "typescript": "~3.2.2",
-    "@angular/cli": "~7.2.1",
-    "@angular/language-service": "^7.2.0",
+    "@angular/compiler-cli": "^8.2.11",
+    "@angular-devkit/build-ng-packagr": "~0.803.12",
+    "@angular-devkit/build-angular": "~0.803.12",
+    "ng-packagr": "^5.4.0",
+    "tsickle": "^0.37.0",
+    "tslib": "^1.10.0",
+    "typescript": "~3.5.3",
+    "@angular/cli": "~8.3.12",
+    "@angular/language-service": "^8.2.11",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~10.12.18",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
