--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@angular/animations": "^9.0.2",
-    "@angular/cdk": "^7.2.1",
+    "@angular/cdk": "^9.1.0",
     "@angular/common": "^9.0.2",
     "@angular/compiler": "^9.0.2",
     "@angular/core": "^9.0.2",
@@ -25,48 +25,49 @@
     "@angular/platform-browser": "^9.0.2",
     "@angular/platform-browser-dynamic": "^9.0.2",
     "@angular/router": "^9.0.2",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.2.1",
-    "compression": "^1.7.3",
-    "connect-redis": "^3.4.0",
-    "cookie-parser": "^1.4.3",
-    "core-js": "^2.6.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "compression": "^1.7.4",
+    "connect-redis": "^3.4.2",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^2.6.11",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "json-on-relations": "2.3.1",
-    "node-authorization": "^1.0.6",
-    "passport": "^0.4.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "jor-angular": "^3.1.9",
+    "json-on-relations": "3.1.2",
+    "node-authorization": "^1.0.7",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "rxjs": "^6.5.3",
-    "tslib": "^1.10.0",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.0",
     "ui-message": "^1.2.0",
     "ui-message-angular": "^1.2.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^9.0.2",
-    "@angular-devkit/build-ng-packagr": "~0.900.3",
     "@angular-devkit/build-angular": "~0.900.3",
-    "ng-packagr": "^9.0.0",
-    "typescript": "~3.7.5",
+    "@angular-devkit/build-ng-packagr": "~0.900.3",
     "@angular/cli": "~9.0.3",
+    "@angular/compiler-cli": "^9.0.2",
     "@angular/language-service": "^9.0.2",
-    "@types/jasmine": "~3.3.5",
-    "@types/jasminewd2": "~2.0.6",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "ng-packagr": "^9.0.0",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.1"
+    "tslint": "~5.12.1",
+    "typescript": "~3.7.5"
   },
   "repository": {
     "type": "git",
