--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -8,6 +8,9 @@
     "main.ts",
     "polyfills.ts"
   ],
+  "angularCompilerOptions": {
+    "enableIvy": true
+  },
   "include": [
     "src/**/*.d.ts"
   ]
