--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-logon",
-  "version": "1.1.0",
+  "version": "1.2.3",
   "description": "A logon page in Angular and Node",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,7 @@
     "build_publish": "npm run ngbuild && npm run publish",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "ng e2e --dev-server-target= --webdriverUpdate=false",
     "redis": "redis-server /etc/redis/6379.conf",
     "prod": "node $NODE_DEBUG_OPTION server.js"
   },
@@ -35,8 +35,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "jor-angular": "^3.1.9",
-    "json-on-relations": "3.1.2",
-    "node-authorization": "^1.0.7",
+    "json-on-relations": "3.1.5",
+    "node-authorization": "2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
