--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.3",
+    "tslib": "^2.0.0",
     "ui-message": "^1.2.0",
     "ui-message-angular": "^1.3.1",
     "zone.js": "~0.10.3"
@@ -56,17 +56,17 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.2.1",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "ng-packagr": "^10.1.2",
-    "protractor": "^5.4.3",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.1.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.1",
+    "tslint": "~6.1.0",
     "typescript": "~4.0.3"
   },
   "repository": {
