--- a/projects/logon/package.json
+++ b/projects/logon/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/VinceZK/Logon/issues"
   },
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "homepage": "https://github.com/VinceZK/Logon#readme"
 }
