Upgrade to Angular 11

--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -132,7 +131,7 @@
       "prefix": "dk",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/logon/tsconfig.lib.json",
             "project": "projects/logon/ng-package.json"
