--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod  --build-optimizer",
-    "ngbuild": "ng build logon --prod",
+    "build": "ng build --configuration production --build-optimizer",
+    "ngbuild": "ng build logon --configuration production",
     "publish": "cd dist/logon && npm publish",
     "build_publish": "npm run ngbuild && npm run publish",
     "test": "ng test",
@@ -16,15 +16,15 @@
     "prod": "node $NODE_DEBUG_OPTION server.js"
   },
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^10.2.5",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/animations": "^12.0.2",
+    "@angular/cdk": "^12.0.2",
+    "@angular/common": "^12.0.2",
+    "@angular/compiler": "^12.0.2",
+    "@angular/core": "^12.0.2",
+    "@angular/forms": "^12.0.2",
+    "@angular/platform-browser": "^12.0.2",
+    "@angular/platform-browser-dynamic": "^12.0.2",
+    "@angular/router": "^12.0.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "compression": "^1.7.4",
@@ -34,23 +34,23 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "jor-angular": "^3.4.0",
+    "jor-angular": "^3.4.1",
     "json-on-relations": "3.2.8",
     "node-authorization": "2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "ui-message": "^1.2.0",
     "ui-message-angular": "^1.4.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.13",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.0.2",
+    "@angular/cli": "~12.0.2",
+    "@angular/compiler-cli": "^12.0.2",
+    "@angular/language-service": "^12.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -62,11 +62,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "^12.0.2",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.2.4"
   },
   "repository": {
     "type": "git",
