--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/compiler": "^13.3.9",
     "@angular/core": "^13.3.9",
     "@angular/forms": "^13.3.9",
+    "@angular/localize": "^13.3.9",
     "@angular/platform-browser": "^13.3.9",
     "@angular/platform-browser-dynamic": "^13.3.9",
     "@angular/router": "^13.3.9",
@@ -43,7 +44,7 @@
     "rxjs": "^6.6.3",
     "tslib": "^2.4.0",
     "ui-message": "^1.2.0",
-    "ui-message-angular": "^1.4.1",
+    "ui-message-angular": "^1.4.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
